2002-12-05  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (lp_limit_1, ca_limit_1): set to 2^12-1
	* spvw.d (main) [DEBUG_SPVW]: check that the STACK depth is more
	that CALL-ARGUMENTS-LIMIT

2002-12-05  Sam Steingold  <sds@gnu.org>

	* clx.f (get_event_mask): fixed error handling
	removed saving/restoring subr_self throughout
	(display_hash_table): replace STACK_0 instead of returning a value
	(make_xid_obj_2): reflect this change

2002-12-04  Bruno Haible  <bruno@clisp.org>

	* foreign.d (convert_function_to_foreign, init_ffi): Add casts to make
	it compile in C++ mode.

2002-12-04  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): removed the `initializations2'
	optimization which bound some iteration variables right around
	the main-code: this allows accessing iteration variables in the
	finally clauses (this also shortens the bytecode)

2002-12-04  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-length-test): use EXT:LIST-LENGTH-DOTTED
	instead if LENGTH because the argument may be dotted when it comes
	from a destructuring lambda list

2002-12-03  Sam Steingold  <sds@gnu.org>

	* stream.d (MAKE-WINDOW): do not assume that *TERMINAL-IO* is a
	terminal-stream
	(FILE-POSITION): decrement the position if a character has been
	unread (so that PEEK-CHAR does not modify FILE-POSITION)

2002-12-02  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out): handle characters

2002-12-02  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (finalize-coutput-file): produce ANSI C,
	compilable with a C++ compiler such as g++

2002-12-02  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 647015 ]: ffi:def-c-enum broken from .fas file
	* foreign1.lisp (def-c-enum): use DEF-C-TYPE to define the enum
	type to C `int'

2002-12-02  Sam Steingold  <sds@gnu.org>

	* int2adic.d (D_D_mal2adic_D, UDS_UDS_durch2adic_UDS):
	avoid "warning: statement with no effect"
	* hashtabl.d (hashcode, CLASS-TUPLE-GETHASH): ditto

2002-12-01  Bruno Haible  <bruno@clisp.org>
